Agregar signup-final a cuenta

--- a/View/cuenta.html
+++ b/View/cuenta.html
@@ -132,7 +132,8 @@
                     </div>
                     <div class="col-lg-4 col-sm-12 pt-5">
                         <a href="permisos.html">Administrar cuentas >></a><br />
-                        <a href="cambio_contra.html">Cambiar contraseña >></a>
+                        <a href="cambio_contra.html">Cambiar contraseña >></a><br>
+                        <a href="sign-up-final.html">Dar de alta cuentas >></a>
                     </div>
                 </div>
             </div>
