Arreglar header conocenos

--- a/View/conocenos.html
+++ b/View/conocenos.html
@@ -10,9 +10,11 @@
         <title>Conocenos</title>
     </head>
     <body>
-        <div class="header container-fluid pt-5 pt-md-4" align="center">
-            <div class="borde_imagen">
-                <h1>Conocenos</h1>
+        <div class="container-fluid">
+            <div class="header row text-center">
+                <div class="col-12 my-auto">
+                    <img src="img/moderna2.png" class="img-fluid img-thumbnail logo mt-5">
+                </div>
             </div>
         </div>
         <div>
