--- a/View/css/styles_conocenos.css
+++ b/View/css/styles_conocenos.css
@@ -4,6 +4,13 @@
 	border-radius: 10px;
 }
 
+.logo{
+	background-color: white;
+	border-radius: 20px;
+	width: 50%;
+	position: relative;
+}
+
 .front{
 	height: 100vh;
 	position: relative;
@@ -44,7 +51,7 @@
 
 .header{
 	background-color: #F09F08;
-	height: 150px;
+	height: 15vh;
 }
 
 @media screen and (max-width: 991px){
