--- a/public/css/general.css
+++ b/public/css/general.css
@@ -60,3 +60,47 @@ p, a {
     font-family: FB !important;
     
 }
+
+
+
+/* The message box is shown when the user clicks on the password field */
+        
+#message {
+    display: none;
+    color: #000;
+    position: relative;
+    padding: 15px;
+    margin-top: 5px;
+}
+
+#message p {
+    padding: 5px 15px;
+    font-size: 15px;
+}
+/* Add a green text color and a checkmark when the requirements are right */
+
+.valid {
+    color: green;
+}
+
+.valid:before {
+    position: relative;
+    left: -35px;
+    content: "✔";
+}
+/* Add a red text color and an "x" when the requirements are wrong */
+
+.invalid {
+    color: rgb(211, 150, 20);
+}
+
+.invalid:before {
+    position: relative;
+    left: -35px;
+    content: "✖";
+}
+
+.prompt{
+    font-size:small;
+    color:#F00;
+}
