--- a/View/sign-up-final.html
+++ b/View/sign-up-final.html
@@ -235,6 +235,8 @@
                                                 <p id="msg2" class="prompt"></p>
                                                 <p class="card-text">Contraseña</p>
                                                 <input type="password" id="psw" name="psw" class="campo" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
+                                                <p class="card-text">Repetir contraseña</p>
+                                                <input type="password" id="confirm_password" class="campo" required>
                                                 <div class="row">
                                                     <div class="col-3" align="rigth">
                                                         <input type="checkbox" id="c_contra" onclick="mostrar_c()" />
@@ -359,6 +361,19 @@
 
         <script src="js\app.js"></script>
         <script>
+            var password = document.getElementById("psw"),
+                confirm_password = document.getElementById("confirm_password");
+    
+            function validatePassword() {
+                if (password.value != confirm_password.value) {
+                    confirm_password.setCustomValidity("Favor de revisar contraseña");
+                } else {
+                    confirm_password.setCustomValidity('');
+                }
+            }
+    
+            password.onchange = validatePassword;
+            confirm_password.onkeyup = validatePassword;
             var myInput = document.getElementById("psw");
             var letter = document.getElementById("letter");
             var capital = document.getElementById("capital");
