--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,11 +1,9 @@
-body{
-    height: 1200px;
-}
 footer {
     background: #f8b90e;
     background: -webkit-linear-gradient(59deg, #cc8b2b, #cfa507);
     background: linear-gradient(59deg, #b86202, #fabf22);
     color: white;
+    margin-bottom: 0%;
 }
 
 footer a {
@@ -40,4 +38,9 @@ footer a:hover {
 
 body{
     height: 100vh;
+}
+
+.myimg svg {
+  width: 100%;
+  height: 100%
 }
