--- a/public/css/classic.css
+++ b/public/css/classic.css
@@ -12184,7 +12184,7 @@ a.sidebar-link svg {
 }
 .sidebar-item.active > .sidebar-link {
     color: black;
-    background: #F09F08;
+    background: #ffffff;
 }
 .sidebar-item.active .sidebar-link:hover i,
 .sidebar-item.active .sidebar-link:hover svg,
@@ -12252,7 +12252,7 @@ a.sidebar-link svg {
 }
 
 .sidebar-brand:hover svg {
-    color: #f09f08;
+    color: #ffffff;
 
 }
 .sidebar-toggle {
@@ -12298,25 +12298,6 @@ a.sidebar-link svg {
     padding: 1.125rem 1.5rem 0.375rem;
     font-size: 0.75rem;
     text-transform: none;
-}
-.sidebar-bottom {
-    -webkit-transition: margin-left 0.35s ease-in-out, left 0.35s ease-in-out;
-    transition: margin-left 0.35s ease-in-out, left 0.35s ease-in-out;
-    padding: 1rem;
-    width: inherit;
-    font-size: 0.8rem;
-    bottom: 0;
-    left: 0;
-    position: fixed;
-    background: #313b4c;
-    min-width: 256px;
-    max-width: 256px;
-    color: #e9ecef;
-    border-right: 0;
-    margin-left: 0;
-}
-.sidebar-bottom h5 {
-    color: #e9ecef;
 }
 .sidebar.toggled .sidebar-bottom {
     margin-left: -256px;
